add styles to countdawn

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -324,3 +324,12 @@ ul{padding:0; margin:0}
     background-color: #b2f4f4;
   }
 }
+
+.countdown-main {
+  background-color: #4267B2;
+  color: white;
+}
+
+.bold-text {
+  font-weight: bold;
+}
