--- a/resources/sass/documentation/style.scss
+++ b/resources/sass/documentation/style.scss
@@ -29,8 +29,8 @@
 | Components
 |--------------------------------------------------------------------------
  */
-@import "./components/card";
-
+@import "./components/card",
+        "./components/components";
 
 /*
 |--------------------------------------------------------------------------
