--- a/resources/sass/documentation/components/_card.scss
+++ b/resources/sass/documentation/components/_card.scss
@@ -1,5 +1,26 @@
-.card {
-    background-color: #FFF;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+.auth-card {
+    position: relative;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 15px;
+    color: #FFF;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    z-index: 100;
+    width: 500px;
+    padding: 3rem;
+}
+
+@media (max-width: 550px) {
+    .auth-card {
+        max-width: 400px;
+        padding: 1rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .auth-card {
+        max-width: 300px;
+        padding: 1rem;
+    }
 }
