--- a/resources/sass/documentation/components/_components.scss
+++ b/resources/sass/documentation/components/_components.scss
@@ -7,6 +7,13 @@
     }
 }
 
+.input-group {
+    &:focus-within .input-group-prepend .input-icon-container i {
+        text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+        transition: 0.4s ease;
+    }
+}
+
 .input-icon-container {
     background-color: rgba(255, 255, 255, 0.1);
     border: none !important;
@@ -29,8 +36,7 @@
     color: $base-color-darkgray;
     transition: 0.4s ease;
 
-    &:hover {
-        color: $base-color-darkgray;
+    &:hover:enabled {
         background: rgba(255, 255, 255, 1);
         box-shadow: 0 0 25px rgba(255, 255, 255, 0.2);
     }
