--- a/resources/sass/documentation/style.scss
+++ b/resources/sass/documentation/style.scss
@@ -37,8 +37,8 @@
 | Layouts
 |--------------------------------------------------------------------------
  */
-@import "./layout/header";
-
+@import "./layout/header",
+        "./layout/footer";
 /*
 |--------------------------------------------------------------------------
 | Pages
