--- a/resources/sass/documentation/components/_card.scss
+++ b/resources/sass/documentation/components/_card.scss
@@ -1,3 +1,10 @@
+.card {
+    background-color: #FFF;
+    border: none;
+    border-radius: 15px;
+    //box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+
 .auth-card {
     position: relative;
     background: rgba(255, 255, 255, 0.1);
