--- a/resources/sass/documentation/components/_components.scss
+++ b/resources/sass/documentation/components/_components.scss
@@ -82,7 +82,21 @@
     }
 }
 
+.delete-button {
+    background: none;
+    border: none;
+    transition: 0.4s ease;
+
+    &:hover i {
+        color: $base-color-darkgray;
+    }
+}
+
 .modal {
     backdrop-filter: blur(5px);
     background-color: rgba(255, 255, 255, 0.3);
+}
+
+.modal-dialog {
+    margin: 2rem auto;
 }
