--- a/resources/sass/documentation/components/_components.scss
+++ b/resources/sass/documentation/components/_components.scss
@@ -82,14 +82,23 @@
     }
 }
 
+.custom-plus-btn {
+    color: $base-color-dark;
+    background-color: #FFF;
+    border: 1px solid $base-color-dark;
+    transition: 0.4s ease;
+
+    &:hover {
+        background-color: $base-color-dark;
+        box-shadow: 0 0 10px $base-color-dark;
+        color: #FFF;
+    }
+}
+
 .delete-button {
     background: none;
     border: none;
     transition: 0.4s ease;
-
-    &:hover i {
-        color: $base-color-darkgray;
-    }
 }
 
 .modal {
@@ -100,3 +109,11 @@
 .modal-dialog {
     margin: 2rem auto;
 }
+
+.param-card {
+    background-color: $base-color-dark;
+    color: #FFF;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.7);
+    border-radius: 15px;
+}
+
