Изменил структуру компонентов

--- a/resources/sass/documentation/components/_components.scss
+++ b/resources/sass/documentation/components/_components.scss
@@ -107,8 +107,12 @@
 }
 
 .modal-dialog {
-    margin: 2rem auto;
+    margin: 6rem auto;
 }
+
+//.modal-lg {
+//    margin: 6rem auto;
+//}
 
 .param-card {
     background-color: $base-color-dark;
