--- a/resources/sass/documentation/components/_components.scss
+++ b/resources/sass/documentation/components/_components.scss
@@ -54,6 +54,17 @@
     }
 }
 
+.custom-btn-secondary {
+    background: #FFF;
+    color: rgba(255, 34, 17, 0.81);
+    border: 0;
+    transition: 0.4s ease;
+
+    &:hover {
+        box-shadow: 0 0 25px rgba(255, 255, 255, 0.4);
+    }
+}
+
 .custom-btn-outlined {
     transition: 0.4s ease;
     border: 1px solid limegreen;
@@ -110,14 +121,17 @@
     margin: 6rem auto;
 }
 
-//.modal-lg {
-//    margin: 6rem auto;
-//}
-
 .param-card {
     background-color: $base-color-dark;
     color: #FFF;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.7);
+    border-radius: 15px;
+}
+
+.error-card {
+    background-color: rgba(255, 34, 17, 0.81);
+    color: #FFF;
+    box-shadow: inset 0 0 10px rgba(255, 84, 89, 0.67);
     border-radius: 15px;
 }
 
