Исправил миграцию Добавил компоненты для отображения документации Добавил стили для компонент Добавил футер

--- a/resources/sass/documentation/base/_global.scss
+++ b/resources/sass/documentation/base/_global.scss
@@ -11,6 +11,16 @@ body {
     font-family: "Rubik", sans-serif;
 }
 
+#documentation-app {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+main {
+    flex: 1 0 auto;
+}
+
 #documentation-login {
     display: flex;
     height: 100%;
