--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -993,7 +993,50 @@ ul{
 }
 .avatar-menu-size{
 	height: 100%;
+    position: relative;
 }
+.avatar-menu-size:hover .sticker-block{
+    display: block;
+}
+/*Sticker Coin vs Tomato*/
+.sticker-block{
+    position: absolute;
+    bottom: -5px;
+    width: 100%;
+    height: 20%;
+    display: none;
+}
+.sticker {
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+    z-index: 10;
+    cursor: pointer;
+}
+.sticker-block .sticker-like {
+    width: 44px;
+    height: 44px;
+    left: 0px;
+    bottom: -1px;
+}
+.sticker-block .sticker-dislike {
+    width: 56px;
+    height: 56px;
+    right: -5px;
+    bottom: -12px;
+}
+.sticker-like{
+    width: 30px;
+    height: 30px;
+    background-image: url("/images/sticker-coin.png");
+}
+.sticker-dislike{
+    width: 30px;
+    height: 30px;
+    background-image: url("/images/sticker-tomato.png");
+}
+
 .radius-4px{
 	border-radius: 4px;
 }
