--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1005,6 +1005,7 @@ ul{
     width: 100%;
     height: 20%;
     display: none;
+    color: white;
 }
 .sticker {
     position: absolute;
@@ -1030,6 +1031,7 @@ ul{
     width: 30px;
     height: 30px;
     background-image: url("/images/icons/sticker-coin.png");
+    /*position: relative;*/
 }
 .sticker-dislike{
     width: 30px;
