--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -998,6 +998,32 @@ ul{
 .avatar-menu-size:hover .sticker-block{
     display: block;
 }
+
+/*Ava-border
+    Gold > 300
+    Silver > 200
+    Bronze > 100
+*/
+.ava-bord-bronze {
+    border: 2px solid #cd7f32;
+    padding: 2px;
+}
+.ava-bord-silver {
+    border: 2px solid #c0c0c0;
+    padding: 2px;
+}
+.ava-bord-gold {
+    border: 2px solid #ffd700;
+    padding: 2px;
+}
+
+.avatar-circle {
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    font-size: 2rem;
+    top: -21px;
+}
 /*Crown
     Gold > 300
     Silver > 200
@@ -1010,7 +1036,6 @@ ul{
     position: absolute;
     font-size: 2rem;
     top: -21px;
-
 }
 
 .crown-bronze {
@@ -1024,6 +1049,14 @@ ul{
 .crown-gold {
     color: #ffd700;
     text-shadow: 0 0 5px #ffd700;
+}
+
+.avatar-circle {
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    font-size: 2rem;
+    top: -21px;
 }
 
 /*Sticker Coin vs Tomato*/
