--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1366,6 +1366,16 @@ body {
     color: #fff;
 }
 
+.btn-block2 {
+    width: 80%;
+    background-color: rgba(83, 49, 206, 0.801);
+    border: none;
+    box-shadow: 0 0 5px rgba(0, 0,0, 0.5);
+    outline: none !important;
+    transition: 0.4s ease;
+    color: #fff;
+}
+
 .btn-block:hover {
     background-color: rgba(72, 37, 212, 1);
     transition: 0.4s ease;
@@ -2768,4 +2778,36 @@ textarea::-webkit-scrollbar-thumb {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.vdp-datepicker {
+    display: flex;
+    align-items: center;
+}
+
+.vdp-datepicker div {
+    width: 100%;
+}
+
+.vdp-datepicker--gray input.form-control {
+    background-color: #e9ecef;
+}
+
+.vdp-datepicker--gray input.form-control:focus {
+    background-color: #fff;
+}
+
+.vdp-datepicker__calendar-button {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    color: red;
+    z-index: 1;
+}
+
+.input-datepicker {
+    background: transparent;
+    padding: 10px 50px 10px 10px;
+    cursor: pointer;
 }
