Добавил скролл на таблицы, изменил поля в 3 таблице, резюме открывается в новой вкладке, обнуляю все ячейки внутри шагов

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2786,3 +2786,7 @@ textarea::-webkit-scrollbar-thumb {
     border: 1px solid #d5d5d5;
     border-radius: 0.4rem;
 }
+.recruiting-max-height-table{
+    overflow-y: scroll;
+    max-height: 550px;
+}
