--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1269,7 +1269,7 @@ div-size{
 .close {
 	position: absolute;
 	top: 15px;
-	/*right: 35px;*/
+	right: 35px;
 	color: #f1f1f1;
 	font-size: 40px;
 	font-weight: bold;
