--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1408,6 +1408,11 @@ body {
     transition: 0.4s ease;
 }
 
+.fa-search:hover {
+    color: #3b984e;
+    transition: 0.4s ease;
+}
+
 .fa-youtube-play:hover {
     color: #FF0000;
     transition: 0.4s ease;
