Изменения в таблице мотивация, адаптация для менеджеров. Вытащил Пункт 1 положения, цифры к %, tooltip себестоимость.

--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -2790,3 +2790,10 @@ textarea::-webkit-scrollbar-thumb {
     overflow-y: scroll;
     max-height: 550px;
 }
+
+.tooltip.motivation-tooltip {
+    .tooltip-inner {
+        max-width: none!important;
+        background-color: #6c93e5;
+    }
+}
