Добавил всплывающую таблицу и строку через компонент motivation.vue, переменные tableTooltip и stringTooltip.

--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -2794,6 +2794,6 @@ textarea::-webkit-scrollbar-thumb {
 .tooltip.motivation-tooltip {
     .tooltip-inner {
         max-width: none!important;
-        background-color: #6c93e5;
+        background-color: #7abaff;
     }
 }
