--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -238,6 +238,7 @@ ul{
     color: #508ff4;
     border-radius: 16px;
     padding: 8px;
+    white-space: pre;
 }
 .parse-table thead tr:nth-of-type(1) td:nth-of-type(3) span{
     background: #ffffff;
@@ -245,6 +246,7 @@ ul{
     color: #508ff4;
     border-radius: 16px;
     padding: 8px;
+    white-space: pre;
 }
 .parse-table thead tr:nth-of-type(2) td:first-child{
     border-top-left-radius: 12px;
