--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -2920,15 +2920,16 @@ textarea::-webkit-scrollbar-thumb {
     max-height: 550px;
 }
 
-.d-player-video-wrap {
+.dplayer-video-wrap {
     position: relative;
     padding-bottom: 56.25%;
     padding-top: 30px;
-    height: 0;
     overflow: hidden;
+    width: auto!important;
+    height: 0!important;
 }
 
-.d-player-video-wrap.d-player-video {
+.dplayer-video-wrap .dplayer-video {
     position: absolute;
     top: 0;
     left: 0;
