--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -1239,6 +1239,7 @@ ul{
 .flex-row{
     display: flex;
     flex-flow: row;
+    justify-content: center;
 }
 /*Конец стилей страницы входа*/
 /*Начало главной страницы новостей*/
