--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -811,9 +811,9 @@ div-size{
 .width-80{
 	width: 80%!important;
 }
-.width-35{
-	width:35%;!important;
-}
+//.width-35{
+//	width:35%;!important;
+//}
 
 .margin-r-2{
 	margin-right: 2%;
