--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -1236,6 +1236,9 @@ ul{
 .main_margin{
     margin: 0 9rem;
 }
+.main_margin1{
+    margin: 0;
+}
 .flex-row{
     display: flex;
     flex-flow: row;
