--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -1276,7 +1276,7 @@ div-size{
 	align-items: center;
 	flex-direction: column;
 	width: 45%;
-	heiidh:35%
+	height:35%
 	/*position: relative;
     display: inline-block;
     vertical-align: top;
@@ -1293,7 +1293,7 @@ div-size{
 	align-items: center;
 	flex-direction: row;
 	width: 27px;
-	heiidh:30px;
+	height:30px;
 
 
 }
@@ -1335,95 +1335,95 @@ div-size{
 #myImg:hover {opacity: 0.7;}
 
 /* The Modal (background) */
-.modal {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
-	padding-top: 200px; /* Location of the box */
-	left: 0;
-	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,.5); /* Black w/ opacity */
-}
-
-/* Modal Content (image) */
-.modal-content {
-	margin: auto;
-	display: block;
-	justify-content: center;
-
-	max-width:70%;
-	height: 80%;
-}
-.modal-size{
-	width: auto;
-
-}
-.modal-flex{
-	display: flex;
-	justify-content: center;
-}
-
-/* Caption of Modal Image */
-#caption {
-	margin: auto;
-	display: block;
-	width: 80%;
-	max-width: 100%;
-	text-align: center;
-	color: #ccc;
-	padding: 10px 0;
-	height: 150px;
-}
-
-/* Add Animation */
-.modal-content, #caption {
-	-webkit-animation-name: zoom;
-	-webkit-animation-duration: 0.6s;
-	animation-name: zoom;
-	animation-duration: 0.6s;
-}
-
-@-webkit-keyframes zoom {
-	from {-webkit-transform:scale(0)}
-	to {-webkit-transform:scale(1)}
-}
-
-@keyframes zoom {
-	from {transform:scale(0)}
-	to {transform:scale(1)}
-}
-
-/* The Close Button */
-.close {
-	position: absolute;
-	top: 15px;
-	right: 35px;
-	color: #f1f1f1;
-	font-size: 40px;
-	font-weight: bold;
-	transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-	color: #bbb;
-	text-decoration: none;
-	cursor: pointer;
-}
-
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-	.modal-content {
-		width: 90%;
-	}
-	.label-size{
-		font-size: 12px;
-	}
-}
+//.modal {
+//	display: none; /* Hidden by default */
+//	position: fixed; /* Stay in place */
+//	z-index: 1; /* Sit on top */
+//	padding-top: 200px; /* Location of the box */
+//	left: 0;
+//	top: 0;
+//	width: 100%; /* Full width */
+//	height: 100%; /* Full height */
+//	overflow: auto; /* Enable scroll if needed */
+//	background-color: rgb(0,0,0); /* Fallback color */
+//	background-color: rgba(0,0,0,.5); /* Black w/ opacity */
+//}
+//
+///* Modal Content (image) */
+//.modal-content {
+//	margin: auto;
+//	display: block;
+//	justify-content: center;
+//
+//	max-width:70%;
+//	height: 80%;
+//}
+//.modal-size{
+//	width: auto;
+//
+//}
+//.modal-flex{
+//	display: flex;
+//	justify-content: center;
+//}
+//
+///* Caption of Modal Image */
+//#caption {
+//	margin: auto;
+//	display: block;
+//	width: 80%;
+//	max-width: 100%;
+//	text-align: center;
+//	color: #ccc;
+//	padding: 10px 0;
+//	height: 150px;
+//}
+//
+///* Add Animation */
+//.modal-content, #caption {
+//	-webkit-animation-name: zoom;
+//	-webkit-animation-duration: 0.6s;
+//	animation-name: zoom;
+//	animation-duration: 0.6s;
+//}
+//
+//@-webkit-keyframes zoom {
+//	from {-webkit-transform:scale(0)}
+//	to {-webkit-transform:scale(1)}
+//}
+//
+//@keyframes zoom {
+//	from {transform:scale(0)}
+//	to {transform:scale(1)}
+//}
+//
+///* The Close Button */
+//.close {
+//	position: absolute;
+//	top: 15px;
+//	right: 35px;
+//	color: #f1f1f1;
+//	font-size: 40px;
+//	font-weight: bold;
+//	transition: 0.3s;
+//}
+//
+//.close:hover,
+//.close:focus {
+//	color: #bbb;
+//	text-decoration: none;
+//	cursor: pointer;
+//}
+//
+///* 100% Image Width on Smaller Screens */
+//@media only screen and (max-width: 700px){
+//	.modal-content {
+//		width: 90%;
+//	}
+//	.label-size{
+//		font-size: 12px;
+//	}
+//}
 /*Стили страницы входа*/
 .image{
     padding-top: 5px;
