--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -7,7 +7,8 @@ a:hover{
 }
 ul{
     list-style: none;
-    margin: 0 !important;
+    /*margin: 0 !important;
+    Если включить, сломается Таблица Компания Parse tree-folder.vue*/
     padding: 0;
 }
 /* FONTS  START */
