--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1615,7 +1615,7 @@ div-size {
   display: flex;
   align-items: center;
   flex-direction: row;
-  width: 27px;
+  width: 31px;
   height: 30px;
 }
 
@@ -1739,7 +1739,6 @@ div-size {
 .flex-row {
   display: flex;
   flex-flow: row;
-  justify-content: center;
 }
 
 /*Конец стилей страницы входа*/
@@ -1932,6 +1931,11 @@ body {
   transition: 0.4s ease;
 }
 
+.fa-search:hover {
+  color: #3b984e;
+  transition: 0.4s ease;
+}
+
 .fa-youtube-play:hover {
   color: #FF0000;
   transition: 0.4s ease;
@@ -1996,6 +2000,16 @@ body {
   margin-top: 85px;
   height: 50px;
   max-width: 60%;
+  background-color: rgba(83, 49, 206, 0.801);
+  border: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  outline: none !important;
+  transition: 0.4s ease;
+  color: #fff;
+}
+
+.btn-block2 {
+  width: 80%;
   background-color: rgba(83, 49, 206, 0.801);
   border: none;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
@@ -3675,5 +3689,37 @@ td:not(:last-child) {
 .tooltip.motivation-tooltip .tooltip-inner {
   max-width: none !important;
   background-color: #7abaff;
+}
+
+.vdp-datepicker {
+  display: flex;
+  align-items: center;
+}
+
+.vdp-datepicker div {
+  width: 100%;
+}
+
+.vdp-datepicker--gray input.form-control {
+  background-color: #e9ecef;
+}
+
+.vdp-datepicker--gray input.form-control:focus {
+  background-color: #fff;
+}
+
+.vdp-datepicker__calendar-button {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  color: red;
+  z-index: 1;
+}
+
+.input-datepicker {
+  background: transparent;
+  padding: 10px 50px 10px 10px;
+  cursor: pointer;
 }
 
